--- a/Restaurant Roulette/src/main/AndroidManifest.xml
+++ b/Restaurant Roulette/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+
         <activity
             android:name="com.physphil.android.restaurantroulette.MainActivity"
             android:label="@string/app_name" >
@@ -17,7 +18,10 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".RestaurantActivity" />
+        <activity
+            android:name=".RestaurantActivity"
+            android:windowSoftInputMode="stateHidden" />
+
     </application>
 
 </manifest>
