--- a/Restaurant Roulette/src/main/AndroidManifest.xml
+++ b/Restaurant Roulette/src/main/AndroidManifest.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.physphil.android.restaurantroulette"
-    android:versionCode="2"
-    android:versionName="0.1" >
+    package="com.physphil.android.restaurantroulette" >
 
     <application
         android:allowBackup="true"
