use Google Play Services to get location for restaurant search

--- a/Restaurant Roulette/src/main/AndroidManifest.xml
+++ b/Restaurant Roulette/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.physphil.android.restaurantroulette" >
 
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -21,6 +23,11 @@
         <activity
             android:name=".RestaurantActivity"
             android:windowSoftInputMode="stateHidden" />
+
+        <!-- Needed for Google Play Services -->
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
 
     </application>
 
