--- a/Restaurant Roulette/build.gradle
+++ b/Restaurant Roulette/build.gradle
@@ -5,10 +5,10 @@ android {
     buildToolsVersion "19.0.1"
 
     defaultConfig {
-        minSdkVersion 7
+        minSdkVersion 9
         targetSdkVersion 19
-        versionCode 3
-        versionName "0.11"
+        versionCode 5
+        versionName "0.13"
     }
     buildTypes {
         release {
@@ -20,5 +20,6 @@ android {
 
 dependencies {
     compile 'com.android.support:appcompat-v7:19.0.1'
+    compile 'com.google.android.gms:play-services:4.2.42'
     compile fileTree(dir: 'libs', include: ['*.jar', '*.aar'])
 }
